--- a/packages/local-py/pyproject.toml
+++ b/packages/local-py/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Local, no-backend resolver for Continuum demos"
 readme = "README.md"
 requires-python = ">=3.9"
-license = {text = "Apache-2.0"}
+license = {file = "LICENSE"}
 authors = [{name = "Continuum"}]
 dependencies = [
   "pyyaml>=6.0.0",
