--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -5,15 +5,13 @@ on:
     tags:
       - "v*"
 
-permissions:
-  contents: read
-
 jobs:
   publish:
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
-      id-token: write  # REQUIRED for Trusted Publishing
+      id-token: write   # ✅ REQUIRED for Trusted Publishing
 
     defaults:
       run:
