--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -1,3 +1,4 @@
+# .github/workflows/release-pypi.yml
 name: release-pypi
 
 on:
@@ -5,35 +6,42 @@ on:
     tags:
       - "v*"
 
+# NOTE: Do NOT set top-level permissions without id-token,
+# because it can override job permissions in some org setups.
+# We'll set permissions per-job instead.
+
 jobs:
   publish:
+    name: Build & Publish to PyPI (Trusted Publishing)
     runs-on: ubuntu-latest
 
     permissions:
       contents: read
-      id-token: write   # ✅ REQUIRED for Trusted Publishing
+      id-token: write   # REQUIRED for OIDC / Trusted Publishing
 
     defaults:
       run:
         working-directory: packages/local-py
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
           cache: "pip"
           cache-dependency-path: packages/local-py/pyproject.toml
 
-      - name: Build
+      - name: Build (sdist + wheel) and validate metadata
         run: |
           python -m pip install --upgrade pip
           python -m pip install build twine
           python -m build
           twine check dist/*
 
-      - name: Publish
+      - name: Publish to PyPI (OIDC)
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: packages/local-py/dist
