chore: add OSS boundary check to CI
Adds scripts/check-boundary.sh that verifies oss/ never imports from
continuum_engine (core). Runs as the first CI step before lint/test.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
           pip install -e oss/mcp-server
           pip install -e oss/integrations/llamaindex
 
+      - name: Check OSS boundary
+        run: bash scripts/check-boundary.sh
+
       - name: Lint with ruff
         run: ruff check oss/
 
