feat: v0.2.0 — TS SDK, capability registry, demo UI polish, hosted backend, SDK docs
- oss/sdk-ts/: @get-continuum/sdk TypeScript SDK with types and HTTP client
- oss/capabilities/: a-la-carte module registry, continuum.yaml loader, adapter interfaces
- demo/ui: Decision Artifact panel, color-coded verdicts, clickable inspector
- demo/api: /commit_simple endpoint, auth middleware, SQLite DB schema
- docs/sdks: Python and TypeScript SDK reference pages
- CHANGELOG: v0.2.0 entry

--- a/demo/api/pyproject.toml
+++ b/demo/api/pyproject.toml
@@ -4,12 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "continuum-demo-api"
-version = "0.1.0"
-description = "FastAPI wrapper for Continuum SDK (demo UI backend)"
+version = "0.2.0"
+description = "FastAPI wrapper for Continuum SDK (demo + hosted MVP backend)"
 requires-python = ">=3.10"
 dependencies = [
   "fastapi",
   "uvicorn[standard]",
   "continuum-sdk>=0.1.1",
+]
+
+[project.optional-dependencies]
+hosted = [
+  "aiosqlite",
 ]
 
