Add hosted backend (Neon + Render) and redesigned console UI
- Dual-mode backend: local (file) / hosted (Postgres) via CONTINUUM_MODE
- StorageBackend protocol with FileStorageBackend and PostgresStorageBackend
- Email/password auth with JWT sessions and ctk_ API keys
- Neon Postgres migration (workspaces, users, api_keys, decisions)
- Render Blueprint (render.yaml) for one-click API deployment
- Redesigned multi-page console UI: Playground, Decisions, Inspector,
  Integrations, Settings, Login/Signup
- Next.js standalone output for Vercel deployment

--- a/demo/Dockerfile.api
+++ b/demo/Dockerfile.api
@@ -6,13 +6,17 @@ WORKDIR /app
 COPY oss/sdk/python /build/sdk
 RUN pip install --no-cache-dir /build/sdk
 
-# Install demo API from local source
+# Install demo API from local source (with hosted extras for Postgres + auth)
 COPY demo/api /build/api
-RUN pip install --no-cache-dir /build/api
+RUN pip install --no-cache-dir "/build/api[hosted]"
 
-# Copy API entrypoint
+# Copy API entrypoint and supporting modules
 COPY demo/api/main.py /app/main.py
+COPY demo/api/auth /app/auth
+COPY demo/api/storage /app/storage
+COPY demo/api/db /app/db
 
+ENV CONTINUUM_MODE=local
 ENV CONTINUUM_STORE=/data/.continuum
 
 EXPOSE 8000
