--- a/demo/api/pyproject.toml
+++ b/demo/api/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 
 [project.optional-dependencies]
 hosted = [
-  "aiosqlite",
+  "psycopg[binary]>=3.1",
+  "bcrypt>=4.0",
+  "PyJWT>=2.8",
 ]
-
