--- a/demo/Dockerfile.api
+++ b/demo/Dockerfile.api
@@ -2,6 +2,11 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
+# Install build dependencies needed by bcrypt / psycopg
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends gcc libpq-dev && \
+    rm -rf /var/lib/apt/lists/*
+
 # Install SDK from local source
 COPY oss/sdk/python /build/sdk
 RUN pip install --no-cache-dir /build/sdk
